# queria-backend

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.production.yml  docker-compose.yml
.github/workflows/: cleanup-ghcr.yml  cli-detect-and-tag.yml  cli-homebrew-formula.yml  deploy.yml  release-cli.yml
admin/: Dockerfile  README.md  astro.config.mjs  components.json  package-lock.json  package.json  playwright.config.ts
admin/src/components/: EdgeLines.tsx  NodeCloud.tsx  ThreeCanvas.tsx
admin/src/layouts/: AdminLayout.astro
admin/src/lib/: api.ts
admin/src/pages/: dashboard.astro  index.astro  login.astro  logout.astro  playground.astro  setup.astro
admin/src/pages/approvals/: index.astro
admin/src/pages/audit/: index.astro
admin/src/pages/evaluation/: index.astro
admin/src/pages/invites/: accept.astro
admin/src/pages/jobs/: index.astro
admin/src/pages/knowledge/: index.astro
admin/src/pages/members/: index.astro
admin/src/pages/needs-review/: index.astro
admin/src/pages/orgs/: index.astro
admin/src/pages/projects/: index.astro
admin/src/pages/sources/: detail.astro  index.astro
admin/src/pages/tokens/: index.astro
admin/src/styles/: tokens.css
admin/tests/: admin.spec.ts
agent-tools/hooks/: queria-retrieve-hook.sh
config/: trufflehog-exclude-paths.txt  trufflehog-include-paths.txt
crates/queria-api/: Cargo.toml
crates/queria-api/src/: app.rs  main.rs
crates/queria-api/src/http/: agent_auth.rs  agent_index_local.rs  agent_retrieval.rs  agent_setup.rs  approvals.rs  audit_logs.rs  auth.rs  dashboard.rs  embedding_jobs.rs  evaluations.rs  health.rs  ingestion_jobs.rs  isolation.rs  knowledge_items.rs  mod.rs  needs_review.rs  orgs.rs  orgs_tests.rs  projects.rs  retrieval.rs  setup.rs  sources.rs  tokens.rs
crates/queria-auth/: Cargo.toml
crates/queria-auth/src/: agent_token.rs  password.rs  session.rs
crates/queria-backup/: Cargo.toml
crates/queria-backup/src/: lib.rs  manifest.rs  object_store.rs  postgres.rs  qdrant.rs  restore_drill.rs  retention.rs
crates/queria-backup/tests/: backup_integration.rs
crates/queria-cli/: Cargo.toml
crates/queria-cli/src/: backup.rs  bootstrap.rs  checks.rs  config.rs  config_tui.rs  credentials.rs  database.rs  doctor_mcp.rs  doctor_tui.rs  edge_agent.rs  embeddings.rs  evaluation.rs  index_here.rs  index_tui.rs  main.rs  mcp_install.rs  restore_drill.rs  retrieval.rs  status_tui.rs  tui_hub.rs
crates/queria-cli/tui-tests/: .gitignore  README.md  cli-bin.ts  package-lock.json  package.json  tui-test.config.ts
crates/queria-cli/tui-tests/tests/: hub.test.ts
crates/queria-core/: Cargo.toml
crates/queria-core/src/: agent_helpers.rs  config.rs  contracts.rs  error.rs  evaluation.rs  ids.rs  lib.rs  model.rs  observability.rs
crates/queria-core/src/auth/: agent_token.rs  mod.rs  org_invite.rs  password.rs  permissions.rs
crates/queria-core/tests/: evaluation_contract.rs
crates/queria-db/: Cargo.toml
crates/queria-db/src/: admin_queries.rs  embedding.rs  evaluation.rs  hybrid.rs  ingestion.rs  lib.rs  migrate.rs  repositories.rs
crates/queria-db/src/repositories/: auth.rs  mod.rs  orgs.rs  projects.rs  types.rs
crates/queria-db/src/repositories/projects/: agent_access.rs  agent_index.rs  approvals.rs  crud.rs  mod.rs  needs_review.rs  scratch.rs  search.rs  seed.rs  sources.rs  tests.rs  tokens.rs
crates/queria-ingestion/: Cargo.toml
crates/queria-ingestion/src/: git.rs  lib.rs  local_index_gates.rs  model.rs  parser.rs  scanner.rs  service.rs
crates/queria-ingestion/tests/: parser_contract.rs  security_contract.rs  service_contract.rs
crates/queria-mcp/: Cargo.toml
crates/queria-mcp/src/: http.rs  lib.rs  main.rs  server.rs  tools.rs
crates/queria-observability/: Cargo.toml
crates/queria-proxy/: Cargo.toml
crates/queria-proxy/src/: health.rs  main.rs  routes.rs
crates/queria-search/: Cargo.toml
crates/queria-search/src/: compress.rs  embedding.rs  evaluation.rs  hybrid.rs  lib.rs  qdrant.rs  rerank.rs  retrieval.rs  retrieval_tests.rs  scratch_embed.rs  voyage.rs
crates/queria-worker/: Cargo.toml
crates/queria-worker/src/: backup_jobs.rs  embedding_jobs.rs  jobs.rs  main.rs
docker/: Caddyfile  entrypoint.sh  nginx-queria.fjulian.id.conf
docs/: ARCHITECTURE.md  DOCS_POLICY.md  HANDOFF.md  IMPROVEMENTS.md  PRODUCT.md  README.md  SIMPLIFICATION.md
docs/archive/: README.md
docs/archive/superpowers/plans/: 2026-07-04-git-ingestion-indexing-mvp.md  2026-07-18-agent-driven-onboarding.md  2026-07-18-multi-org-tenancy.md  2026-07-19-agent-auto-retrieve-hooks.md  2026-07-19-agent-path-edge-e2e.md  2026-07-19-local-git-index-here.md  2026-07-20-onboarding-friction-pack.md  2026-07-21-cli-release-homebrew-parallel.md  (+1 more)
docs/archive/walkthroughs/: phase-3.md
docs/runbooks/: agent-onboard-prompt.md  backup-restore.md  deployment.md  hybrid-retrieval.md  local-development.md  onboarding.md  queria-cli-homebrew.md  rollback.md
docs/superpowers/plans/: 2026-07-04-git-ingestion-indexing-mvp.md  2026-07-04-hybrid-retrieval.md  2026-07-05-queria-end-to-end.md  2026-07-23-cli-release-automation.md
docs/superpowers/specs/: 2026-07-04-hybrid-retrieval-design.md  2026-07-18-autonoma-maximization-design.md  2026-07-23-cli-release-automation-design.md
docs/walkthroughs/: phase-4.md
migrations/: 20260704000100_baseline.sql  20260704000200_sessions_and_setup.sql  20260704000300_source_branch_and_retrieval_indexes.sql  20260704000400_git_ingestion.sql  20260704000500_hybrid_retrieval.sql  20260704000600_embedding_retry_backoff.sql  20260704000700_evaluation_reports.sql  20260705000100_backup_records.sql  20260717000100_knowledge_status_scratch.sql  20260717000200_scratch_content_hash.sql  20260718000100_multi_org_tenancy.sql  20260719000100_knowledge_status_needs_review.sql
scripts/: cli_version.sh  e2e_agent_path_edge.py  e2e_index_here_edge.py  generate_homebrew_formula.sh  mission_dl_pending_e2e.py  smoke-hybrid-retrieval.sh
scripts/tests/: cli_version_test.sh
tests/golden_questions/: fjulian-me.jsonl
(+7 files in other folders)
