[workspace]
resolver = "3"
members = [
  "crates/queria-core",
  "crates/queria-auth",
  "crates/queria-db",
  "crates/queria-search",
  "crates/queria-observability",
  "crates/queria-api",
  "crates/queria-mcp",
  "crates/queria-worker",
  "crates/queria-ingestion",
  "crates/queria-proxy",
  "crates/queria-cli",
]

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/nandocoeg2/queria-backend"
rust-version = "1.85"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
argon2 = { version = "0.5", features = ["std"] }
axum = "0.8"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive", "env"] }
http = "1"
json5 = "0.4"
mockall = "0.13"
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json", "migrate"] }
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "net", "time"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
toml = "0.8"
url = "2"
uuid = { version = "1", features = ["v7", "serde"] }
