[package]
name = "queria-auth"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
argon2.workspace = true
base64.workspace = true
chrono.workspace = true
queria-core = { path = "../queria-core" }
rand.workspace = true
serde.workspace = true
sha2.workspace = true
thiserror.workspace = true

