[package]
name = "queria-backup"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
queria-core = { path = "../queria-core" }
reqwest.workspace = true
rust-s3 = { version = "0.37", default-features = false, features = ["tokio-rustls-tls"] }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
sqlx.workspace = true
tokio = { workspace = true, features = ["process"] }
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
queria-db = { path = "../queria-db" }
