[package]
name = "queria-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
queria-core = { path = "../queria-core" }
queria-backup = { path = "../queria-backup" }
queria-db = { path = "../queria-db" }
queria-ingestion = { path = "../queria-ingestion" }
queria-search = { path = "../queria-search" }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
