[package]
name = "queria-cli"
version = "0.2.4"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
crossterm.workspace = true
queria-core = { path = "../queria-core" }
queria-backup = { path = "../queria-backup" }
queria-db = { path = "../queria-db" }
queria-ingestion = { path = "../queria-ingestion" }
queria-search = { path = "../queria-search" }
ratatui.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
uuid.workspace = true
