[package]
name = "queria-db"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
chrono.workspace = true
mockall.workspace = true
queria-core = { path = "../queria-core" }
sqlx.workspace = true
uuid.workspace = true
