[package]
name = "queria-db"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
chrono.workspace = true
queria-auth = { path = "../queria-auth" }
queria-core = { path = "../queria-core" }
queria-ingestion = { path = "../queria-ingestion" }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
sqlx.workspace = true
uuid.workspace = true
