[package]
name = "queria-ingestion"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
async-trait.workspace = true
json5.workspace = true
queria-core = { path = "../queria-core" }
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
sha2.workspace = true
tokio = { workspace = true, features = ["process", "fs"] }
toml.workspace = true
url.workspace = true
