[package]
name = "queria-mcp"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
chrono.workspace = true
queria-auth = { path = "../queria-auth" }
queria-core = { path = "../queria-core" }
queria-db = { path = "../queria-db" }
queria-observability = { path = "../queria-observability" }
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true

[dev-dependencies]
http.workspace = true
