[package]
name = "queria-proxy"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
pingora.workspace = true
queria-core = { path = "../queria-core" }
queria-observability = { path = "../queria-observability" }
serde.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
