[package]
name = "queria-search"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
chrono.workspace = true
mockall.workspace = true
queria-core = { path = "../queria-core" }
queria-db = { path = "../queria-db" }

