[package]
name = "queria-worker"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
queria-core = { path = "../queria-core" }
queria-observability = { path = "../queria-observability" }
tokio.workspace = true
tracing.workspace = true
