[package]
name = "queria-worker"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
mockall.workspace = true
queria-backup = { path = "../queria-backup" }
queria-core = { path = "../queria-core" }
queria-db = { path = "../queria-db" }
queria-ingestion = { path = "../queria-ingestion" }
queria-search = { path = "../queria-search" }
serde_json.workspace = true
sqlx.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
